# BabelFish-Translator

./: README.md  dev.bat  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  services.rs
src-tauri/src/services/: task.rs
src-tauri/src/services/system/: env.rs  settings.rs
src-tauri/src/services/task/: history.rs  scheduler.rs  service.rs  store.rs
src-tauri/src/services/translate/: command.rs  runner.rs
src/components/: ConfigPanel.tsx  HistoryPanel.tsx  QueuePanel.tsx  TopBar.tsx  WindowFrame.tsx
src/hooks/: useScrollFade.ts
