[package]
name = "babelfish"
version = "0.1.4"
description = "BabelFish desktop app"
authors = ["BabelFish Team"]
edition = "2021"

[lib]
name = "babelfish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
